--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,13 @@
-<h1>This is the new page</h1>
+<div class="container">
+  <div class="row">
+    <div class="col-xl-12">
+      <h3>I am in app component</h3>
+      <br>
+      <app-servers></app-servers>
+    </div>
+  </div>
+</div>
 
-<app-servers></app-servers>
+
+
+
