--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -1,5 +1,29 @@
-<p>servers works!</p>
+<label>Server Name</label>
+<!--<input type="text"-->
+<!--       class="form-control"-->
+<!--       (input)="onUpdateServerName($event)"> -->
 
-<app-server></app-server>
-<app-server></app-server>
-<app-server></app-server>
+<input type="text"
+       class="form-control"
+       [(ngModel)]="serverName"> <!-- Two way binding -->
+
+<!--<p>server name will be <span>{{ serverName }}</span></p>-->
+
+<button class="btn btn-primary"
+        [disabled]="!allowedNewServer"
+        (click)="onCreateServer()"
+>Add Server
+</button>
+
+<!--<p>{{ serverCreationStatus }}</p>-->
+
+<p *ngIf="isServerCreated">Server was created and the server name is {{ serverName }}</p>
+
+<!--<p *ngIf="isServerCreated; else noServer">Server was created and the server name is {{ serverName }}</p>-->
+<!--<ng-template #noServer><p>No server was created</p></ng-template>-->
+
+<!--<app-server *ngFor="let server of servers"></app-server>-->
+
+@for (server of servers; track server) {
+  <app-server></app-server>
+}
